Fix safari bug (doesn't support gap with flex)

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -10,7 +10,6 @@
     align-self: flex-start;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
     margin-right: 0.5rem;
 }
 
@@ -20,4 +19,5 @@
 
 .logo {
     height: 4rem;
+    margin-right: 0.5rem;
 }
