--- a/styles/IgFeed.module.css
+++ b/styles/IgFeed.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
     margin-top: 1.5rem;
 }
 
@@ -21,6 +20,10 @@
 
 .link {
     padding: 0.2rem;
+}
+
+.linkContainer {
+    margin-bottom: 1rem;
 }
 
 .link:hover,
